--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;700&display=swap" rel="stylesheet">
   
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.19/dist/sweetalert2.all.min.js"></script><link href="https://feeldreams.github.io/liatnih/style.css" rel="stylesheet" type="text/css" />
-  <script src="https://unpkg.com/typeit@8.6.6/dist/index.umd.js"></script><script src="https://feeldreams.github.io/liatnih/script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.19/dist/sweetalert2.all.min.js"></script><link href="https://jeriko13.github.io/liatnih/style.css" rel="stylesheet" type="text/css" />
+  <script src="https://unpkg.com/typeit@8.6.6/dist/index.umd.js"></script><script src="https://jeriko13.github.io/liatnih/script.js"></script>
   <script src="https://kit.fontawesome.com/4f3ce16e3e.js" crossorigin="anonymous"></script>
 
 <head>
-<title>Script HTML Untukmu</title>
+<title>Surat Bucin</title>
 <!-- 
   Made with love by Rayys!
      Blog: https://PalingIT.com
@@ -22,10 +22,10 @@
 <body>
 	
    <!-- Ganti Audio di sini -->
-   <audio src="https://feeldreams.github.io/anotherme.mp3" id="linkmp3" class="sembunyi"></audio>
+   <audio src="https://jeriko13.github.io/anotherme.mp3" id="linkmp3" class="sembunyi"></audio>
    
    <div id="bodyblur">
-     <!-- Wallpaper --><img src="https://feeldreams.github.io/nordic.jpeg" id="wallpaper"/>
+     <!-- Wallpaper --><img src="https://jeriko13.github.io/nordic.jpeg" id="wallpaper"/>
    </div>
    
    <div id='Content'>
@@ -37,10 +37,10 @@
 
      <div class="kumpulanstiker">
          <!-- Stiker untuk Konten -->
-         <img src="https://feeldreams.github.io/bwa2.gif" id="fotoakhir"/>
-         <img src="https://feeldreams.github.io/bunga.gif" id="fotoakhir2"/>
-         <img src="https://feeldreams.github.io/peachkiss.gif" id="fotoakhir3"/>
-         <img src="https://feeldreams.github.io/peachhug.gif" id="fotoakhir4"/>
+         <img src="https://jeriko13.github.io/bwa2.gif" id="fotoakhir"/>
+         <img src="https://jeriko13.github.io/bunga.gif" id="fotoakhir2"/>
+         <img src="https://jeriko13.github.io/peachkiss.gif" id="fotoakhir3"/>
+         <img src="https://jeriko13.github.io/peachhug.gif" id="fotoakhir4"/>
      </div>
      
      <div><blockquote id='bq'>
@@ -54,9 +54,9 @@
        <!-- Konten Pilihan Kado -->
        <p id="kalimatd">Oh iya, coba pilih <b>kado</b> di bawah ini! 😆❤️</p>
        <div id="kolombaru">
-         <li><img src="https://feeldreams.github.io/kadoin.png" onClick="rnkado = 1;otomatis();"/></li>
-         <li><img src="https://feeldreams.github.io/kadoin.png" onClick="rnkado = 2;otomatis();"/></li>
-         <li><img src="https://feeldreams.github.io/kadoin.png" onClick="rnkado = 3;otomatis();"/></li>
+         <li><img src="https://jeriko13.github.io/kadoin.png" onClick="rnkado = 1;otomatis();"/></li>
+         <li><img src="https://jeriko13.github.io/kadoin.png" onClick="rnkado = 2;otomatis();"/></li>
+         <li><img src="https://jeriko13.github.io/kadoin.png" onClick="rnkado = 3;otomatis();"/></li>
        </div>
        
        <!-- Konten Isi Kado -->
