--- a/index.html
+++ b/index.html
@@ -10,14 +10,7 @@
 
 <head>
 <title>Surat Bucin</title>
-<!-- 
-  Made with love by Rayys!
-     Blog: https://PalingIT.com
-     Instagram: @rayyarrr
-     TikTok: @rayy4r
-     Email: rayyar0703@gmail.com
-  Thanks to all <3
--->
+
 </head>
 <body>
 	
@@ -74,7 +67,7 @@
      </div>
      
      <!-- Pesan yang dikirim ke WhatsApp -->
-     <span id="pesanWA" class="sembunyi">Awww, Good Morning too!</span>
+     <span id="pesanWA" class="sembunyi">Awww, Good Morning too 😍😍😍!</span>
 	 
      <!-- Nomor WhatsApp Kamu -->
      <!-- Biarkan 628 jika Tak Perlu -->
